# k8s-wrapper

./: CHANGELOG.md  Readme.md  k8s-wrapper.cabal  spec.yaml
.github/workflows/: haskell-ci.yml
src/Network/: K8s.hs
src/Network/K8s/: Application.hs
test/: unit.hs
