cabal-version:      2.4
name:               k8s-wrapper
version:            0.1.0.0
synopsis:           Application wrapper for the k8s environment
description:        A wrapper for the k8s environment, this wrapper provides
                    the logic that can be used to monitor application state in the kubernetes
                    environment

homepage:           https://github.com/cheopslab/k8s-wrapper

bug-reports:         https://github.com/cheopslab/k8s-wrapper
license:            MPL-2.0
license-file:       LICENSE
author:             Alexander Vershilov
maintainer:         alexander.vershilov@sirius.online

-- A copyright notice.
-- copyright:
category:           Network
extra-source-files: CHANGELOG.md

library
    exposed-modules: 
      Network.K8s
    default-extensions:
      ImportQualifiedPost
      LambdaCase
      NumericUnderscores
      OverloadedStrings
      RecordWildCards
    -- other-modules:

    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        async ^>= 2.2.4,
        stm ^>=2.5.0.1,
        text ^>=1.2.4.1,
        http-types ^>=0.12.3,
        wai,
        wai-middleware-prometheus,
        warp

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite k8s-wrapper-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:
        base ^>=4.14.3.0,
        stm ^>=2.5.0.1,
        text ^>=1.2.4.1
